fixed flash message (does not shift down anymore)

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -40,7 +40,7 @@ body {
 }
 
 .header-container {
-  margin-bottom: 126px;
+  margin-bottom: 85px;
   width: 100%;
 }
 
